Moved demo to samples directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,4 +66,4 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR}/generated)
 add_subdirectory(headers)
 add_subdirectory(core)
 add_subdirectory(ogl31video)
-add_subdirectory(demo)
+add_subdirectory(samples)
