--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -28,6 +28,7 @@ target_sources(core PUBLIC
     include/dse/core/Scene.h
     include/dse/core/Sphere.h
     include/dse/core/ThreadPool.h
+    include/dse/core/UILoop.h
     include/dse/core/Window.h
     include/dse/core/WindowShowCommand.h
     include/dse/core/detail/impexp.h
@@ -54,6 +55,7 @@ target_sources(core PRIVATE
     Scene.cpp
     Sphere.cpp
     ThreadPool.cpp
+    UILoop.cpp
     Window.cpp
     errors.cpp
     mcursor.cpp
@@ -80,6 +82,8 @@ target_sources(core PRIVATE
     IOContext_win32.h
     ThreadPool_win32.cpp
     ThreadPool_win32.h
+    UILoop_win32.cpp
+    UILoop_win32.h
     Window_win32.cpp
     Window_win32.h
     errors_win32.cpp
