Added relationship between Window and UILoop

--- a/samples/demo/CMakeLists.txt
+++ b/samples/demo/CMakeLists.txt
@@ -1,22 +1,22 @@
-add_executable(demo)
+#add_executable(demo)
 
-target_link_libraries(demo PRIVATE core ogl31video)
-target_link_options(demo PRIVATE
-    $<$<BOOL:${DSE_SUBSYSTEM_WINDOWS}>:${DSE_SUBSYSTEM_WINDOWS_LINK_OPTIONS}>
-)
+#target_link_libraries(demo PRIVATE core ogl31video)
+#target_link_options(demo PRIVATE
+#    $<$<BOOL:${DSE_SUBSYSTEM_WINDOWS}>:${DSE_SUBSYSTEM_WINDOWS_LINK_OPTIONS}>
+#)
 
-target_sources(demo PRIVATE
-    dse.cpp
-)
+#target_sources(demo PRIVATE
+#    dse.cpp
+#)
 
-if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
-FetchContent_MakeAvailable(swal)
-target_link_libraries(demo PRIVATE swal::swal)
-target_sources(demo PRIVATE
-    rc_win32/icon.ico
-    rc_win32/manifest.xml
-    rc_win32/res.rc
-)
-endif()
+#if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+#FetchContent_MakeAvailable(swal)
+#target_link_libraries(demo PRIVATE swal::swal)
+#target_sources(demo PRIVATE
+#    rc_win32/icon.ico
+#    rc_win32/manifest.xml
+#    rc_win32/res.rc
+#)
+#endif()
 
-install(TARGETS demo)
+#install(TARGETS demo)
