Added auto_task, refactored coroutine support

--- a/headers/CMakeLists.txt
+++ b/headers/CMakeLists.txt
@@ -1,11 +1,14 @@
 add_library(headers INTERFACE)
 
-target_include_directories(headers INTERFACE
-    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
-)
+# target_include_directories(headers INTERFACE
+#     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+#     $<INSTALL_INTERFACE:include>
+# )
 
-target_sources(headers PRIVATE
+target_sources(headers PUBLIC
+FILE_SET HEADERS
+BASE_DIRS include
+FILES
     include/dse/math/color.h
     include/dse/math/constants.h
     include/dse/math/mat.h
@@ -24,6 +27,9 @@ target_sources(headers PRIVATE
     include/dse/util/enum_bitwise.h
     include/dse/util/execution.h
     include/dse/util/functional.h
+    include/dse/util/impl_coro/auto_task.h
+    include/dse/util/impl_coro/generic.h
+    include/dse/util/impl_coro/task.h
     include/dse/util/impl_exec/base.h
     include/dse/util/impl_exec/ensure_started.h
     include/dse/util/impl_exec/start_detached.h
@@ -35,5 +41,5 @@ target_sources(headers PRIVATE
     include/dse/util/unlock_guard.h
 )
 
-install(TARGETS headers EXPORT headers)
-install(EXPORT headers NAMESPACE dse DESTINATION ./headers)
+install(TARGETS headers EXPORT headers FILE_SET HEADERS)
+install(EXPORT headers NAMESPACE dse:: DESTINATION ./headers)
